Fix display for community display
Values with decimal values were not fitting

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -100,12 +100,12 @@ body {
 }
 
 #bliki-link-left {
-  width: calc(95% - 150px);
+  width: calc(95% - 175px);
   float: left;
 }
 
 #bliki-link-right {
-  width: 150px;
+  width: 175px;
   float: right;
 }
 
